            2) check additional input parameter for a) w/o ask = T  b) specify mfrow/mfcol for simukltanous plots of several variables (+ add error check for this option if # of variables does not match grid)
            ...is there aby potential impact on plot.kproto?
          - try to remember why has there been clprofiles and not plot.kproto so far? (...x argument for keep.data = F? )


clustMixType_0.3-11 2023-09-05  - .rd file for stability_kproto
                                - bugfix stability_kproto: undefined input parameter
clustMixType_0.3-10 2023-09-01  - cluster stability determination added, along with updated tests
                                - typos fixed in clustervalidation.R
clustMixType_0.3-9  2022-12-13  - number of test cases for validation_kproto reduced to decrease time for check on CRAN 
                                - fixes in kproto_gower (ln 236ff & 336ff): merging of equal prototypes (one of the for R < 4.1.0 and in ln. 328 the ordinal variables were not considered)
                                - fix for ordinal variables if k is data frame in kproto_gower (ln. 204ff)
                                - logo replaced
clustMixType_0.3-8  2022-12-10  - examples from validation_kproto changed to \dontrun{} as they are too slow for CRAN submission 
clustMixType_0.3-7  2022-12-09  - fixes according to win-builder: importFrom("stats", "median"), .Rd for na.rm and plot.kproto 
                                - NA treatment for kproto_gower (ln. 424): cluster membership NA if all varianbles are NA. Note kproto_gower does not allow for na.rm = "yes" data with removed missings are passed from kproto(). 
                                - validation_kproto (ln. 983)/kproto (ln.920): class(object) != "kproto") replaced by: !inherits(object, "kproto") 
clustMixType_0.3-6  2022-12-07  - internal imputation and one step imputation of doi = 10.1007/s00357-022-09422-y implemented